# metrics

./: .gitignore  README.md
cases/: defaults.json  eq.json
cases/files/: hello_world.hash  match_cases.hash  simple_cases.hash  string_comparisons.hash
scripts/: README.md  main.py  pyproject.toml  requirements.txt
scripts/runner/: build.py  cases.py  logger.py  main.py  messages.py  options.py  output.py  results.py  stats.py  utils.py
