[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Alexander Fedotov <alexfedotov@myurbanjungle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.2.2"
typer = "^0.9.0"
numpy = "^1.26.4"
pyright = "^1.1.350"
rich = "^13.7.0"
structlog = "^24.1.0"
pydantic = "2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
